[package]
name = "websocket_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-channel = "0.3.26"
futures-util = "0.3.26"
log = "0.4.17"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "*"
